...
                        Icons.favorite,
                        color: BondAppTheme.primaryColor,
                        size: 64,
                      ),
                      const SizedBox(height: 16),
                      Text(
                        'Create Account',
                        textAlign: TextAlign.center,
                        style: Theme.of(context).textTheme.displayMedium?.copyWith(
                              color: BondAppTheme.primaryColor,
                              fontWeight: FontWeight.bold,
                            ),
                      ),
...
